namespace UITManagerAgent.BasicInformation;

public abstract class Information {
    public abstract String ToJson();
}