using UITManagerAgent.BasicInformation;

public interface DataCollector {
    public Information Collect();
}